Practice_programs/Ply/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expr
Rule 1     expr -> expr PLUS term
Rule 2     expr -> expr MINUS term
Rule 3     expr -> term
Rule 4     term -> term MUL factor
Rule 5     term -> term DIV factor
Rule 6     term -> factor
Rule 7     factor -> NUM
Rule 8     factor -> LPAREN expr RPAREN

Terminals, with rules where they appear

DIV                  : 5
LPAREN               : 8
MINUS                : 2
MUL                  : 4
NUM                  : 7
PLUS                 : 1
RPAREN               : 8
error                : 

Nonterminals, with rules where they appear

expr                 : 1 2 8 0
factor               : 4 5 6
term                 : 1 2 3 4 5

Parsing method: LALR

state 0

    (0) S' -> . expr
    (1) expr -> . expr PLUS term
    (2) expr -> . expr MINUS term
    (3) expr -> . term
    (4) term -> . term MUL factor
    (5) term -> . term DIV factor
    (6) term -> . factor
    (7) factor -> . NUM
    (8) factor -> . LPAREN expr RPAREN

    NUM             shift and go to state 2
    LPAREN          shift and go to state 3

    term                           shift and go to state 1
    factor                         shift and go to state 4
    expr                           shift and go to state 5

state 1

    (3) expr -> term .
    (4) term -> term . MUL factor
    (5) term -> term . DIV factor

    PLUS            reduce using rule 3 (expr -> term .)
    MINUS           reduce using rule 3 (expr -> term .)
    $end            reduce using rule 3 (expr -> term .)
    RPAREN          reduce using rule 3 (expr -> term .)
    MUL             shift and go to state 6
    DIV             shift and go to state 7


state 2

    (7) factor -> NUM .

    MUL             reduce using rule 7 (factor -> NUM .)
    DIV             reduce using rule 7 (factor -> NUM .)
    PLUS            reduce using rule 7 (factor -> NUM .)
    MINUS           reduce using rule 7 (factor -> NUM .)
    $end            reduce using rule 7 (factor -> NUM .)
    RPAREN          reduce using rule 7 (factor -> NUM .)


state 3

    (8) factor -> LPAREN . expr RPAREN
    (1) expr -> . expr PLUS term
    (2) expr -> . expr MINUS term
    (3) expr -> . term
    (4) term -> . term MUL factor
    (5) term -> . term DIV factor
    (6) term -> . factor
    (7) factor -> . NUM
    (8) factor -> . LPAREN expr RPAREN

    NUM             shift and go to state 2
    LPAREN          shift and go to state 3

    term                           shift and go to state 1
    factor                         shift and go to state 4
    expr                           shift and go to state 8

state 4

    (6) term -> factor .

    MUL             reduce using rule 6 (term -> factor .)
    DIV             reduce using rule 6 (term -> factor .)
    PLUS            reduce using rule 6 (term -> factor .)
    MINUS           reduce using rule 6 (term -> factor .)
    $end            reduce using rule 6 (term -> factor .)
    RPAREN          reduce using rule 6 (term -> factor .)


state 5

    (0) S' -> expr .
    (1) expr -> expr . PLUS term
    (2) expr -> expr . MINUS term

    PLUS            shift and go to state 10
    MINUS           shift and go to state 9


state 6

    (4) term -> term MUL . factor
    (7) factor -> . NUM
    (8) factor -> . LPAREN expr RPAREN

    NUM             shift and go to state 2
    LPAREN          shift and go to state 3

    factor                         shift and go to state 11

state 7

    (5) term -> term DIV . factor
    (7) factor -> . NUM
    (8) factor -> . LPAREN expr RPAREN

    NUM             shift and go to state 2
    LPAREN          shift and go to state 3

    factor                         shift and go to state 12

state 8

    (8) factor -> LPAREN expr . RPAREN
    (1) expr -> expr . PLUS term
    (2) expr -> expr . MINUS term

    RPAREN          shift and go to state 13
    PLUS            shift and go to state 10
    MINUS           shift and go to state 9


state 9

    (2) expr -> expr MINUS . term
    (4) term -> . term MUL factor
    (5) term -> . term DIV factor
    (6) term -> . factor
    (7) factor -> . NUM
    (8) factor -> . LPAREN expr RPAREN

    NUM             shift and go to state 2
    LPAREN          shift and go to state 3

    term                           shift and go to state 14
    factor                         shift and go to state 4

state 10

    (1) expr -> expr PLUS . term
    (4) term -> . term MUL factor
    (5) term -> . term DIV factor
    (6) term -> . factor
    (7) factor -> . NUM
    (8) factor -> . LPAREN expr RPAREN

    NUM             shift and go to state 2
    LPAREN          shift and go to state 3

    term                           shift and go to state 15
    factor                         shift and go to state 4

state 11

    (4) term -> term MUL factor .

    MUL             reduce using rule 4 (term -> term MUL factor .)
    DIV             reduce using rule 4 (term -> term MUL factor .)
    PLUS            reduce using rule 4 (term -> term MUL factor .)
    MINUS           reduce using rule 4 (term -> term MUL factor .)
    $end            reduce using rule 4 (term -> term MUL factor .)
    RPAREN          reduce using rule 4 (term -> term MUL factor .)


state 12

    (5) term -> term DIV factor .

    MUL             reduce using rule 5 (term -> term DIV factor .)
    DIV             reduce using rule 5 (term -> term DIV factor .)
    PLUS            reduce using rule 5 (term -> term DIV factor .)
    MINUS           reduce using rule 5 (term -> term DIV factor .)
    $end            reduce using rule 5 (term -> term DIV factor .)
    RPAREN          reduce using rule 5 (term -> term DIV factor .)


state 13

    (8) factor -> LPAREN expr RPAREN .

    MUL             reduce using rule 8 (factor -> LPAREN expr RPAREN .)
    DIV             reduce using rule 8 (factor -> LPAREN expr RPAREN .)
    PLUS            reduce using rule 8 (factor -> LPAREN expr RPAREN .)
    MINUS           reduce using rule 8 (factor -> LPAREN expr RPAREN .)
    $end            reduce using rule 8 (factor -> LPAREN expr RPAREN .)
    RPAREN          reduce using rule 8 (factor -> LPAREN expr RPAREN .)


state 14

    (2) expr -> expr MINUS term .
    (4) term -> term . MUL factor
    (5) term -> term . DIV factor

    PLUS            reduce using rule 2 (expr -> expr MINUS term .)
    MINUS           reduce using rule 2 (expr -> expr MINUS term .)
    $end            reduce using rule 2 (expr -> expr MINUS term .)
    RPAREN          reduce using rule 2 (expr -> expr MINUS term .)
    MUL             shift and go to state 6
    DIV             shift and go to state 7


state 15

    (1) expr -> expr PLUS term .
    (4) term -> term . MUL factor
    (5) term -> term . DIV factor

    PLUS            reduce using rule 1 (expr -> expr PLUS term .)
    MINUS           reduce using rule 1 (expr -> expr PLUS term .)
    $end            reduce using rule 1 (expr -> expr PLUS term .)
    RPAREN          reduce using rule 1 (expr -> expr PLUS term .)
    MUL             shift and go to state 6
    DIV             shift and go to state 7

